# goath2

./: CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
goath2/: __init__.py  console.py
tests/: test_version.py
