[tool.isort]
profile = "black"
src_paths = ["goath2", "tests"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
files = ["**/*.py"]
namespace_packages = true
show_error_codes = true

[tool.poetry]
authors = ["Nikos Leivadaris <nikosleiv@gmail.com>"]
description = ""
homepage = "https://github.com/nikosl/goath2"
include = ["goath2/py.typed"]
keywords = ["google"]
license = "MIT"
name = "goath2"
readme = "README.md"
repository = "https://github.com/nikosl/goath2"
version = "0.1.0-alpha"

[tool.poetry.scripts]
goath2 = "goath2.console:main"

[tool.poetry.dependencies]
click = "^8.0.4"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
flake8 = "*"
isort = "^5.6"
mkdocs-material = "^8"
mypy = ">0.900,<1"
pre-commit = "^2.8"
pytest = "^6.2"
pytest-cov = "^3"
pytest-mock = "^3.3"
python-semantic-release = "^7.27.0"

[tool.pytest.ini_options]
addopts = "-q"
minversion = "6.0"
testpaths = ["tests"]

[tool.semantic_release]
branch = "main"
build_command = "poetry build"
upload_to_pypi = false
upload_to_release = true
version_toml = [
  "pyproject.toml:tool.poetry.version",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
